# car_Price_prediction

./: README.md  pyproject.toml  requirements.txt
scripts/: build_labels_csv_from_folders.py  predict_large_unlabeled.py  train_clip_holdout.py
src/ advisor_clip_pipeline/: image_metrics.py
src/advisor_clip_pipeline/: __init__.py  clip_utils.py
